--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: bash
 before_install:
+  - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu $(lsb_release -sc) universe"
   - sudo apt-get -qq update
   - sudo apt-get install -y shellcheck
 script: shellcheck dishy
