--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: bash
+sudo: required
+dist: trusty
 before_install:
   - sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu $(lsb_release -sc) universe"
   - sudo apt-get -qq update
